# Protobuf-zero-copy

./: .gitmodules  CMakeLists.txt  README.md  bench_apply.sh  flame_from_bench.sh  gen_data.sh  regenerate_messages.sh  report.txt  run.sh
bench/: CMakeLists.txt  bench1.cpp  bench1.h  bench2.cpp  bench2.h  bench3.cpp  bench3.h  bench4.cpp  bench4.h  common.h  config.json  main.cpp
bench/configs/: config.json
messages/: common.pb.cc  common.pb.h  common.proto  messge.pb.cc  messge.pb.h  messge.proto  messge1.pb.cc  messge1.pb.h  messge1.proto  wraper.pb.cc  wraper.pb.h  wraper.proto
proto_gen/: CMakeLists.txt  main.cpp  opts.h
proto_gen/lib/: CMakeLists.txt  gen_data.cpp  gen_data.h
